Fixed layout issue

--- a/app/assets/stylesheets/partials/_responsive.sass
+++ b/app/assets/stylesheets/partials/_responsive.sass
@@ -61,6 +61,9 @@
 
   #footer
     margin-top: 0px
+  
+  body
+    background: $background
 
 @media screen and (max-width:570px)
   .responsivecontent
